src/index.scss
@import "~slick-carousel/slick/slick.css";
@import "~slick-carousel/slick/slick-theme.css";

@font-face {
  font-family: "Intro";
  font-weight: 300;
  src: url('./fonts/Intro-Light.woff') format('woff'),
       url('./fonts/Intro-Light.ttf') format('truetype');
}

@font-face {
  font-family: "Intro";
  font-weight: 400;
  src: url('./fonts/Intro-Book.woff') format('woff'),
       url('./fonts/Intro-Book.ttf') format('truetype');
}

@font-face {
  font-family: "Intro";
  font-weight: 700;
  src: url('./fonts/Intro-Bold.woff') format('woff'),
       url('./fonts/Intro-Bold.ttf') format('truetype');
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Intro', sans-serif;
  font-weight: 400;
}

.container {
  max-width: 1366px;
  margin: 0 auto;
}

.subtitle {
  font-size: 40px;
  font-weight: 700;
}

.sectionDescr {
  margin-top: 29px;
  font-size: 22px;
  color: #1D253C;
  opacity: 0.48;
  line-height: 30px;
  text-align: center;
}

.iconBackground {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 32px;
  width: 80px;
  height: 80px;
  border-radius: 100%;
  background-color: #FFFFFF;
  box-shadow: 0 8px 16px 0 rgba(43, 107, 243, 0.16);
  margin-left: 8px;
}

.cardSubtitle {
  font-size: 22px;
  color: #1D253C;
  font-weight: 700;
}

.cardDescr {
  margin-top: 36px;
  font-size: 16px;
  color: #666666;
  line-height: 24px;
}

.dividerIcon {
  position: absolute;
  background-color: inherit;
  padding: 0 34px;
  bottom: -15px;
}

@media (max-width: 870px) {
  .subtitle {
    font-size: 24px;
    text-align: center;
  }
  .cardSubtitle {
    font-size: 20px;
  }
}

